--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a{
 
 
 .main{
-    background-color: transparent;
+    background-color: black;
     margin: 0 auto;
     padding: 1rem;
     width: 500px;
