--- a/style.css
+++ b/style.css
@@ -1,103 +1,97 @@
 body {
-    background-color: #FAF7FD;
-    margin: 0;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Poppins', sans-serif;
-
-
+  background-color: #faf7fd;
+  margin: 0;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
-
 .main {
-    background-color: transparent;
-    margin: 0 auto;
-    padding: 1rem;
-    width: 500px;
-    height: 700px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #BB99DD;
+  background-color: transparent;
+  margin: 0 auto;
+  padding: 1rem;
+  width: 500px;
+  height: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #bb99dd;
 }
 
 .avatar {
-    width: 250px;
-    height: 250px;
-    padding: 3px;
-    background-color: white;
-    border-radius: 50%;
-    border: 2px solid #BB99DD;
+  width: 250px;
+  height: 250px;
+  padding: 3px;
+  background-color: white;
+  border-radius: 50%;
+  border: 2px solid #bb99dd;
 }
 
 .avatar img {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
 }
 
 .name {
-    height: 40px;
-    width: 300px;
-    text-align: center;
-    align-items: center;
-    padding-top: 20px;
-    font-size: 22px;
+  height: 40px;
+  width: 300px;
+  text-align: center;
+  align-items: center;
+  padding-top: 20px;
+  font-size: 22px;
 }
 
-
 .buttom {
-    width: 400px;
-    height: 300px;
-    align-items: center;
-    display: inline-block;
-    text-align: center;
+  width: 400px;
+  height: 300px;
+  align-items: center;
+  display: inline-block;
+  text-align: center;
 }
 
 .bt {
-    width: 350px;
-    height: 50px;
-    align-items: center;
-    margin: 12px;
-    border: 2px solid #BB99DD;
-    font-size: 15px;
-    text-align: center;
-    background-color: transparent;
-    transition: 0.6s;
+  width: 350px;
+  height: 50px;
+  align-items: center;
+  margin: 12px;
+  border: 2px solid #bb99dd;
+  font-size: 15px;
+  text-align: center;
+  background-color: transparent;
+  transition: 0.6s;
 }
 
 .bt:hover {
-    background-color: #BB99DD;
-    color: white;
-    cursor: pointer;
+  background-color: #bb99dd;
+  color: white;
+  cursor: pointer;
 }
 
-
 .social {
-
-    width: 350px;
-    height: 50px;
-    padding-top: 10px;
-    text-align: center;
+  width: 350px;
+  height: 50px;
+  padding-top: 10px;
+  text-align: center;
 }
 
 .social img {
-    margin: 15px;
+  margin: 15px;
 }
 
 .social_icon {
-    transition: 0.5s;
+  transition: 0.5s;
 }
 
 .social_icon:hover {
-    cursor: pointer;
-    transform: scale(2);
+  cursor: pointer;
+  transform: scale(2);
 }
